<resources>
    <string name="app_name">MyNozhaApps</string>
    <string name="cancel_trip">Cancel Trip?</string>
    <string name="boarding_text">You will be able to view the ride details and track</string>
    <string name="send_data">Send Data</string>
    <string name="edit_text_hint">Enter your name</string>
    <string name="age_edit_text_hint">Enter your age</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="age_label">Age :</string>
    <string name="trip_id">Trip Id</string>
    <string name="departure_time">Departure Time:</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="remove">Remove</string>
</resources>