<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".excercise.seight.intents.StartingActivity">
    <TextView
        android:textStyle="bold"
        android:textSize="18sp"
        android:id="@+id/label_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="User Name:"/>
    <EditText
        android:hint="@string/enter_your_name"
        android:id="@+id/nameEditText"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/label_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textStyle="bold"
        android:textSize="18sp"
        android:id="@+id/label_age"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age_label"/>
    <EditText
        android:hint="@string/enter_your_age"
        android:id="@+id/ageEditText"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/label_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_send_data"
        android:layout_marginBottom="40dp"
        app:layout_constraintEnd_toEndOf="@id/nameEditText"
        app:layout_constraintStart_toStartOf="@+id/nameEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/send_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>