<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="@dimen/screen_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".excercise.intents.FirstActivity">
    <ImageView
        android:id="@+id/map_launcher"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_map_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/editPhone"
        android:hint="@string/enter_phone_number"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/map_launcher"
        app:layout_constraintTop_toBottomOf="@id/map_launcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/call_launcher"
        android:background="@drawable/phone_background"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/editPhone"
        app:layout_constraintTop_toBottomOf="@id/editPhone"
        android:layout_width="60dp"
        android:layout_height="60dp">
        <ImageView
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_call_white"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sms_launcher"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/sms_background"
        app:layout_constraintTop_toTopOf="@+id/call_launcher"
        app:layout_constraintStart_toEndOf="@id/call_launcher"
        android:layout_marginStart="20dp">
        <ImageView
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_sms"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_age"
        app:layout_constraintStart_toStartOf="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="age:"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/age_editText"/>
    <EditText
        android:hint="@string/age_edit_text_hint"
        android:id="@+id/age_editText"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_username"
        app:layout_constraintStart_toStartOf="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="user name:"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/editText"/>
    <EditText
        android:hint="@string/edit_text_hint"
        android:id="@+id/editText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnSendData"
        android:text="@string/send_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@id/editText"
        app:layout_constraintEnd_toEndOf="@id/editText"/>
</androidx.constraintlayout.widget.ConstraintLayout>

<!--Thursday, 1 August 2024-->